# forge-zed

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  warmup.yaml
.asimov/: ethics.yaml  green.yaml  roadmap.yaml  sprint.yaml  sycophancy.yaml  warmup.yaml
.cargo-husky/hooks/: pre-commit
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
src/: lib.rs
